--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -1,3 +1,12 @@
+@media (min-width: 640px) {
+    #mainPage {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        text-align: center;
+        background-color: #fff;
+    }
+}
+
 #mainPage {
     // *** ex) min-width: 640px === 640px 이상인 애들에 적용된다.
     // $sm 이하는 태블릿
@@ -7,27 +16,28 @@
     $xl: '1280px';
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 
     .section-box {
-        width: 75%;
+        width: 80%;
 
         .section-inner {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-between;
             align-items: center;
         }
 
         .h1-text {
-            font-size: 3.5rem;
-            line-height: 4.6rem;
+            font-size: 3rem;
+            line-height: 4.1rem;
         }
 
         .h2-text {
-            font-size: 3rem;
-            line-height: 3.9rem;
+            font-size: 2.3rem;
+            line-height: 3.2rem;
         }
 
         .body-text {
@@ -38,13 +48,13 @@
         }
 
         .s-text-sm {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
+            line-height: 2.1rem;
             color: rgb(107, 114, 128);
-            line-height: 2.2rem;
         }
 
         .s-text-xl {
-            font-size: 4.5rem;
+            font-size: 4.2rem;
             font-weight: 700;
             color: #000;
             letter-spacing: -0.025em;
@@ -83,9 +93,9 @@
         }
 
         .subscribe-btn {
-            width: 9.5rem;
+            width: 9rem;
             height: 3.5rem;
-            padding: 1rem 2rem;
+            padding: 1rem;
             border-radius: 0.75rem;
             background: linear-gradient(90deg, rgb(36, 123, 255) 0%, rgb(49, 80, 217) 100%);
             color: #fff;
@@ -104,107 +114,62 @@
             display: flex;
             flex-direction: column;
             flex-wrap: nowrap;
-            align-items: flex-start;
-            gap: 2.25rem;
+            justify-content: center;
+            align-items: center;
+            gap: 2rem;
         }
 
-        @media (min-width: $md) {
-            .h1-text {
-                font-size: 3rem;
-                line-height: 4.1rem;
-            }
+        // @media (min-width: $md) {
+        //     .h1-text {
+        //         font-size: 3rem;
+        //         line-height: 4.1rem;
+        //     }
 
-            .h2-text {
-                font-size: 2.6rem;
-                line-height: 3.5rem;
-            }
+        //     .h2-text {
+        //         font-size: 2.6rem;
+        //         line-height: 3.5rem;
+        //     }
 
-            .body-text {
-                font-size: 1.4rem;
-                line-height: 2.3rem;
-            }
+        //     .body-text {
+        //         font-size: 1.4rem;
+        //         line-height: 2.3rem;
+        //     }
 
-            .s-text-sm {
-                font-size: 1.2rem;
-                line-height: 2rem;
-            }
+        //     .s-text-sm {
+        //         font-size: 1.2rem;
+        //         line-height: 2rem;
+        //     }
 
-            .s-text-xl {
-                font-size: 3.7rem;
-            }
+        //     .s-text-xl {
+        //         font-size: 3.7rem;
+        //     }
 
-            .s-text-top {
-                font-size: 1.5rem;
-            }
+        //     .s-text-top {
+        //         font-size: 1.5rem;
+        //     }
 
-            .closeBeta-btn {
-                width: 13rem;
-                height: 4rem;
-                color: #fff;
-                font-size: 1rem;
-            }
+        //     .closeBeta-btn {
+        //         width: 13rem;
+        //         height: 4rem;
+        //         color: #fff;
+        //         font-size: 1rem;
+        //     }
 
-            .subscribe-btn {
-                width: 8rem;
-                height: 3.6rem;
-                padding: 1rem 1rem;
-                font-size: 1rem;
-            }
+        //     .subscribe-btn {
+        //         width: 8rem;
+        //         height: 3.6rem;
+        //         padding: 1rem 1rem;
+        //         font-size: 1rem;
+        //     }
 
-            .section-desc {
-                gap: 1.8rem;
+        //     .section-desc {
+        //         gap: 1.8rem;
 
-                .title-top {
-                    margin-bottom: 1.2rem;
-                }
-            }
-        }
-
-        @media (min-width: $sm) {
-            .section-inner {
-                flex-direction: column;
-            }
-
-            .h2-text {
-                font-size: 2.5rem;
-                line-height: 3.4rem;
-            }
-
-            .s-text-sm {
-                font-size: 1.5rem;
-                line-height: 2.6rem;
-            }
-
-            .aside-text {
-                font-size: 1.3rem;
-            }
-
-            .s-text-xl {
-                font-size: 4rem;
-            }
-
-            .closeBeta-btn {
-                width: 14rem;
-                height: 4.5rem;
-                padding: 1rem 2rem;
-                margin-top: 2rem;
-            }
-
-            .subscribe-btn {
-                width: 9rem;
-                padding: 1rem 0;
-            }
-
-            .title-top {
-                justify-content: center;
-                margin-bottom: 2rem;
-            }
-
-            .section-desc {
-                align-items: center;
-                gap: 2rem;
-            }
-        }
+        //         .title-top {
+        //             margin-bottom: 1.2rem;
+        //         }
+        //     }
+        // }
     }
 
     .section-box-mobile {
@@ -306,11 +271,11 @@
         }
     }
 
-    @media (min-width: $md) {
-        .section-box {
-            width: 80%;
-        }
-    }
+    // @media (min-width: $md) {
+    //     .section-box {
+    //         width: 75%;
+    //     }
+    // }
 
     #section-2 {
         mask-image: linear-gradient(
@@ -322,10 +287,9 @@
         );
 
         .logos-slide-box {
-            margin: 2.3rem 0;
             .logos-slide {
-                gap: 40px;
-                width: 8rem;
+                gap: 2rem;
+                width: 7rem;
                 height: 3rem;
 
                 .logo-img {
@@ -371,23 +335,23 @@
             }
 
             .s3-text-sm {
-                font-size: 1.25rem;
+                font-size: 1.2rem;
                 color: rgb(107, 114, 128);
             }
 
             .s3-text-xl {
-                font-size: 4.5rem;
+                font-size: 4rem;
                 font-weight: 700;
                 color: #000;
                 letter-spacing: -0.025em;
             }
 
-            @media (min-width: $sm) {
-                .s3-image {
-                    width: 45%;
-                    margin: 0 1.5rem;
-                }
-            }
+            // @media (min-width: $sm) {
+            //     .s3-image {
+            //         width: 45%;
+            //         margin: 0 1.5rem;
+            //     }
+            // }
         }
     }
 
@@ -429,25 +393,25 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 1.9rem;
-            height: 50rem;
-            padding: 5.5rem 0 5rem;
+            gap: 1.7rem;
+            height: 44rem;
+            padding: 4rem 2rem;
             background: #f3f6f6;
         }
 
-        @media (min-width: $md) {
-            .section-4-box {
-                gap: 1.7rem;
-                height: 45rem;
-            }
-        }
+        // @media (min-width: $md) {
+        //     .section-4-box {
+        //         gap: 1.7rem;
+        //         height: 45rem;
+        //     }
+        // }
 
-        @media (min-width: $sm) {
-            .section-4-box {
-                gap: 1.8rem;
-                height: 47rem;
-            }
-        }
+        // @media (min-width: $sm) {
+        //     .section-4-box {
+        //         gap: 1.8rem;
+        //         height: 47rem;
+        //     }
+        // }
     }
 
     #section-4-mobile {
@@ -461,13 +425,5 @@
             padding: 5rem 1rem;
             background: #f3f6f6;
         }
-    }
-}
-
-@media (min-width: 640px) {
-    #mainPage {
-        flex-direction: row;
-        flex-wrap: nowrap;
-        background-color: #fff;
     }
 }
