--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -326,3 +326,41 @@ body.hide-channel-talk {
     opacity: 1 !important;
   }
 }
+
+.tags-input-container{
+  height: 3rem;
+  padding: 0 1rem;
+  line-height: 1.5rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: .5em;
+}
+
+.tag-item{
+  background-color: rgb(218, 216, 216);
+  display: inline-block;
+  padding: .25em .75em;
+  border-radius: 20px;
+
+  .close{
+    height: 20px;
+    width: 20px;
+    background-color: rgb(48, 48, 48);
+    color: #fff;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: .5em;
+    font-size: 18px;
+    cursor: pointer;
+  }
+}
+
+.tags-input{
+  flex-grow: 1;
+  padding: .5em 0;
+  border: none;
+  outline: none;
+}
