--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -34,42 +34,71 @@ $breakpoint-mobile: 639px;
 }
 
 .blog-post-list {
-  margin-bottom: 88px;
+  //margin-bottom: 88px;
 
-  & > li:not(:first-child) {
-    margin-top: 80px;
+  & > *:not(:first-child) {
+    //margin-top: 80px;
   }
 
   @media (max-width: $breakpoint-mobile) {
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
   }
 }
 
 .text-max-line {
   text-overflow: ellipsis;
   word-wrap: break-word;
+  word-break: break-word;
   overflow: hidden;
   //max-height: 3.6em;
   //line-height: 1.8em;
 }
 
+.blog-post-item-text-wrap {
+
+}
+
 .blog-post-item-title {
-  color: #333d4b;
-  transition: all 0.2s ease-in-out 0s;
+  display: block;
   line-height: 1.4;
+  max-height: 2.8em;
+  margin-bottom: 6px;
+  font-size: 22px;
+  font-weight: 500;
+  color: #323232;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: .25s;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .blog-post-item-subtitle {
   width: 100%;
-  font-size: 17px;
+  //font-size: 17px;
   font-weight: 300;
-  line-height: 27px;
-  margin-bottom: 10px;
+  //line-height: 27px;
+  //margin-bottom: 10px;
+
+  display: block;
+  display: -webkit-box;
+  height: 48px;
+  margin-bottom: 0;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #323232;
+  overflow: hidden;
+  transition: .25s;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .blog-post-item-img-hover-container {
   transform: translateZ(0);
   transition: 0.2s ease-in-out;
+  img {
+    transition: 0.2s ease-in-out;
+  }
 }
 
 .blog-post-item-img-wrapper {
@@ -110,11 +139,13 @@ a:hover {
   }
 
   .blog-post-item-img-hover-container {
-    box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
-    -webkit-transform: translate3D(0, -3%, 0);
-    -moz-transform: translate3D(0, -3%, 0);
-    -ms-transform: translate3D(0, -3%, 0);
-    transform: translate3D(0, -3%, 0);
+    //box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
+    //transform: translate3D(0, -3%, 0);
+    //transform: scale(1.05);
+    overflow: hidden;
+    img {
+      transform: scale(1.1);
+    }
   }
 }
 
