--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -178,100 +178,33 @@ a:hover {
 .blog-post-detail {
   header {
     position: relative;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    -webkit-justify-content: flex-start;
     justify-content: flex-start;
     width: 100%;
-    height: calc(100vh - 100px);
-    margin-bottom: 120px;
+    //height: calc(100vh - 100px);
+    //margin-bottom: 120px;
 
     @media (max-width: $breakpoint-mobile) {
       height: auto;
-      margin-bottom: 80px;
-    }
-
-    .header-inner {
-      position: relative;
-      width: 100vw;
-      height: 100%;
-
-      @media (max-width: $breakpoint-mobile) {
-        height: 260px;
-      }
-
-      .mask-top {
-        position: absolute;
-        top: 0;
-        width: 100vw;
-        height: 200px;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 100%);
-
-        @media (max-width: $breakpoint-mobile) {
-          height: 100px;
-          background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 100%);
-        }
-      }
-
-      .mask-bottom {
-        position: absolute;
-        bottom: 0;
-        width: 100vw;
-        height: 400px;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 100%);
-
-        @media (max-width: $breakpoint-mobile) {
-          display: none;
-        }
-      }
-
-      .img-content {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        -webkit-transform: translateZ(0);
-        -moz-transform: translateZ(0);
-        -ms-transform: translateZ(0);
-        transform: translateZ(0);
-      }
+      //margin-bottom: 80px;
     }
 
     .header-content {
-      max-width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      -webkit-align-items: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
+      //max-width: 100%;
+      //position: absolute;
+      //top: 0;
+      //left: 0;
+      //right: 0;
+      //bottom: 0;
       display: flex;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
+      align-items: center;
       flex-direction: column;
-      -webkit-box-pack: end;
-      -ms-flex-pack: end;
-      -webkit-justify-content: flex-end;
       justify-content: flex-end;
-      padding-bottom: 40px;
-      color: #ffffff;
-      text-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      //padding-bottom: 40px;
+      color: #191f28;
+      //text-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
       @media (max-width: $breakpoint-mobile) {
         text-shadow: none;
@@ -285,13 +218,14 @@ a:hover {
         font-size: 56px;
         font-weight: 600;
         line-height: 1.4;
-        color: #ffffff;
+        color: #191f28;
+        //color: #ffffff;
         text-align: center;
         margin-bottom: 20px;
 
         @media (max-width: $breakpoint-mobile) {
           font-size: 32px;
-          color: #191f28;
+          //color: #191f28;
         }
       }
 
@@ -489,5 +423,21 @@ span.img-wrapper {
     min-height: 100%;
     max-height: 100%;
     object-fit: cover;
+  }
+}
+
+.blog-article-body-styles-of-element {
+  padding-top: 3rem;
+
+  img {
+    @apply rounded-box;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    transition: all 200ms ease-in-out;
+
+    &:hover {
+      transform: scale(1.025);
+    }
   }
 }
