--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -150,6 +150,15 @@ p {
     border-radius: 14px !important;
 }
 
+.no-selectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @include makeGenericClassByColorName('scordi', $color-scordi);
 @include makeGenericClassByColorName('scordi-light', $color-scordi-light);
 @include make_colored_button('scordi');
