--- a/src/styles/dashboard-calendar.scss
+++ b/src/styles/dashboard-calendar.scss
@@ -179,9 +179,22 @@
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: transparent;
 }
+
+// 상단 월 표기 네비게이션바 스타일
+.react-calendar__navigation {
+  justify-content: center;
+}
+
+// 상단 월 표기 텍스트 스타일 "2023년 9월"
 .react-calendar__navigation__label {
   pointer-events: none;
+  flex-grow: unset !important;
+
+  & > span {
+    font-size: 1rem;
+  }
 }
+
 abbr:where([title]) {
   text-decoration: none;
 }
